--- a/dashboard.css
+++ b/dashboard.css
@@ -91,7 +91,7 @@
   background: rgba(25, 173, 199, 0.219);
   width: 55%;
   padding: 20px 10px;
-  height: max-content;
+  height:40vh;
   margin-right: 5px;
 }
 .balance-head-percentage {
@@ -134,7 +134,7 @@
   background: rgba(25, 173, 199, 0.219);
   padding: 20px 10px;
   width: 45%;
-  height: max-content;
+  height:40vh;
 }
 .savings-head-percentage {
   display: flex;
@@ -182,4 +182,50 @@
 .main-transactions{
   position: fixed;
   overflow-y: hidden;
+}
+.fa-bars{
+  display: none;
+}
+@media only screen and (max-width: 600px) {
+  .menu-side{
+    display:none;
+  }
+  .fa-bars{
+    display: block;
+  margin: 10px 15px;
+  }
+  .top-bar-icons img{
+    display: none;
+  }
+  .first-row-dashboard{
+    width: 100%;
+  }
+  .savings{
+    width: 100%;
+  }
+  .top-bar-icons h3{
+    display: none;
+  }
+  .transaction{
+    display: none;
+  }
+  .dashboard{
+    width: 100%;
+  }
+  .main-dashboard{
+    margin: 0;
+  }
+  .top-bar{
+    height: 7vh;
+  }
+  .right-side-dashboard{
+    display: none;
+  }
+  .left-side-dashboard{
+    width: 100%;
+    height: 100vh;
+  }
+  .balance{
+    width: 100%;
+  }
 }
