--- a/dashboard.css
+++ b/dashboard.css
@@ -2,8 +2,12 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family:"Work Sans";
+}
+.logo {
+  color: blue;
+  font-family: "Merriweather";
+  font-size: 20px;
 }
 .container {
   display: flex;
@@ -20,10 +24,22 @@
   color: rgb(27, 26, 26);
 }
 .menu-side .links span {
-  padding: 10px 0;
-}
-.menu-side .links span {
+  padding: 10px 0; 
   display: flex;
+}
+.mobile-user-profile{
+  display: flex;
+  align-items: center;
+  margin:20px 0;
+}
+.mobile-user-profile img{
+  border-radius:50% ;
+  height: 50px;
+  width: 50px;
+  border: 1px solid black;
+}
+.mobile-user-profile h3{
+  margin-left: 3px;
 }
 .links .fa-solid {
   padding-right: 10px;
@@ -48,9 +64,9 @@
 .dashboard {
   height: 100vh;
   width: 80%;
-  
 }
 .top-bar {
+  align-items: center;
   display: flex;
   justify-content: space-between;
   padding: 5px 0;
@@ -73,7 +89,7 @@
   align-items: center;
 }
  .fa-bell{
-    margin: 10px 0;
+    margin: 10px 15px;
   }
 .main-dashboard {
   display: flex;
@@ -221,9 +237,6 @@
     top: 10px;
     right: 20px;
   }
-  .primary-links a{
-    padding: 150px 0;
-  }
   .top-bar button{
     border: none;
     background: transparent;
@@ -241,8 +254,8 @@
   }
   .secondary-links {
   position: absolute;
-  bottom: 60vh;
-}
+  bottom: 40vh;
+  }
   .top-bar-icons img{
     display: none;
   }
