--- a/dashboard.css
+++ b/dashboard.css
@@ -8,6 +8,7 @@
 .container {
   display: flex;
   height: max-content;
+  padding: 0 10px;
 }
 .menu-side {
   padding: 10px;
@@ -47,8 +48,7 @@
 }
 .dashboard {
   height: 100vh;
-  width: 80%;
-  
+  width: 80%; 
 }
 .top-bar {
   display: flex;
@@ -167,12 +167,18 @@
 .transaction .fa-solid{
   padding: 10px;
   border-radius: 50%;
-  background-color: rgb(139, 212, 187);
 }
-.transaction.fa-burger{
-  background-color: rgb(6, 97, 66);
+.fa-burger{
+  background-color: rgba(126, 160, 5, 0.404);
+}
+.fa-arrow-right-arrow-left{
+  background-color: rgba(5, 111, 160, 0.356);
+}
+.fa-store{
+  background-color: rgba(228, 10, 191, 0.247);
 }
 .transaction{
+  position: relative;
   display: flex;
   justify-content: space-between;
   margin: 10px 0;
