--- a/login.css
+++ b/login.css
@@ -59,7 +59,6 @@ padding: 20px 30px 0 0;
   top: 50%;
   transform: translate(0, -50%);
 }
-
 input{
   outline: none;
   width: 80%;
@@ -77,4 +76,17 @@ input{
   display: block;
   color: seagreen;
   text-decoration: none;
+}
+@media only screen and (max-width: 600px) {
+  .login-image-text{
+    display: none;
+  }
+  .main-input{
+    width: 90%;
+    margin: 0 0 0 50px;
+  }
+  .main-login{
+    padding: 20px 20px 0 0 ;
+    width: 100%;
+  }
 }
