--- a/verify.css
+++ b/verify.css
@@ -1,94 +1,91 @@
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
-  .container{
-    display: flex;
-    width: 100%;
-  }
-  .verify-img-side{
-    background:rgb(70, 70, 207);
-    color: #fff;
-    height: 100vh;
-    width: 50%;
-    text-align: center;
-    padding: 20px;
-  }
-  .verify-img-text{
-    padding: 20px 70px 50px 70px;
-  }
-  .verify-side{
-    padding: 20px;
-    width: 50%;
-    height: 100vh;
-  }
-  .logo{
-    color:rgb(70, 70, 207);
-    text-align: right;
-  }
-  .main-verify{
-    width: 70%;
-    text-align: left;
-    justify-content: center;
-    align-items: center;
-    margin-left:auto;
-    margin-right: auto;
-  }
-  .main-verify h2{
-    margin-bottom: 15px;
-  }
-  .main-input{
-   display: flex;
-   margin: 0 10px;
-  }
-  .main-input h1{
-    margin-bottom: 15px;
-  }
-  input{
-    font-size: 18px;
-    margin: 10px ;
-    padding: 0 0 0 10px;
-    width: 30px;
-    height: 35px;
-    border:1px solid #000;  
-  }
-  #verify-btn{
-    border-radius: 0;
-    height: 40px;
-    width:100%;
-    color: #fff;
-    background-color: black;
-  }
-  .main-verify a{
-    text-decoration: none;
-    font-weight: 500;
-    color: rgb(30, 177, 108);
-  }
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family:"Work Sans";
+}
+.container{
+  width: 100%; 
+  height: 100vh;
+}
+.verify{
+  width: 100vw; 
+  height: 100vh; 
+  display: flex;
+}
+.verify-image-text{
+  position: relative;
+  align-items: center;
+  width: 50%;
+  text-align: center;
+  vertical-align: middle;
+  margin-top: auto;
+  margin-bottom: auto;
+  background-color: blueviolet;
+  height: 100vh;
+}
+.image-text-content{
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+  padding: 20px;
+}
+.verify-image-text img{
+  height: 300px;
+  width: 300px;
+}
+.text{
+  color: #f2f2f2;
+}
+.main-login{
+width: 50%;
+position: relative;
+padding: 20px 30px 0 0;
+}
+.logo{
+  text-align: right;
+  color: rgb(68, 68, 214);
+}
+.login-input{
+  display: flex;
+  justify-content: center; 
+}
+.main-input{
+  width: 60%;
+  height: 50vh; 
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+}
+input{
+  outline: none;
+  width: 80%;
+  border: 1px solid gray;
+  height: 35px;
+  padding: 0 10px;
+  margin-top: 10px;
+}
+#verify-btn{
+  background-color: black;
+  color: #fff;
+  margin-bottom: 15px;
+}
+.main-input a{
+  display: block;
+  color: seagreen;
+  text-decoration: none;
+}
 @media only screen and (max-width: 600px) {
-  .container{
-    text-align: center;
-  }
-  
-  .verify-img-side{
+  .verify-image-text{
     display: none;
   }
-  .main-verify{
-    width: 100%;
-    text-align: center;
-  }
-  .logo{
-    text-align: right;
-  }
   .main-input{
-    width: 100%
+    width: 90%;
+    margin: 0 0 0 50px;
   }
-  #verify-btn{
+  .main-verify{
+    padding: 20px 20px 0 0 ;
     width: 100%;
   }
-  
-  
-  ;
 }
-  
