--- a/login.css
+++ b/login.css
@@ -21,7 +21,7 @@
   vertical-align: middle;
   margin-top: auto;
   margin-bottom: auto;
-  background-color: blueviolet;
+  background: #4070f4;
   height: 100vh;
 }
 .image-text-content{
@@ -45,7 +45,8 @@ padding: 20px 30px 0 0;
 }
 .logo{
   text-align: right;
-  color: rgb(68, 68, 214);
+  color: #4070f4;
+
 }
 .login-input{
 
@@ -68,7 +69,8 @@ input{
   margin-top: 10px;
 }
 #login-btn{
-  background-color: black;
+  border:none;
+  background: #4070f4;
   color: #fff;
   margin-bottom: 15px;
 }
