--- a/verify.css
+++ b/verify.css
@@ -2,18 +2,18 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family:"Work Sans";
+  font-family: "Work Sans";
 }
-.container{
-  width: 100%; 
+.containers {
+  width: 100%;
   height: 100vh;
 }
-.verify{
-  width: 100vw; 
-  height: 100vh; 
+.verify {
+  width: 100vw;
+  height: 100vh;
   display: flex;
 }
-.verify-image-text{
+.verify-image-text {
   position: relative;
   align-items: center;
   width: 50%;
@@ -21,71 +21,117 @@
   vertical-align: middle;
   margin-top: auto;
   margin-bottom: auto;
-  background-color: blueviolet;
+  background: #4070f4;
   height: 100vh;
 }
-.image-text-content{
+.image-text-content {
   width: 100%;
   position: absolute;
   top: 50%;
   transform: translate(0, -50%);
   padding: 20px;
 }
-.verify-image-text img{
+.verify-image-text img {
   height: 300px;
   width: 300px;
 }
-.text{
+.text {
   color: #f2f2f2;
 }
-.main-login{
-width: 50%;
-position: relative;
-padding: 20px 30px 0 0;
+.main-verify {
+  width: 50%;
+  position: relative;
+  padding: 20px 30px 0 0;
 }
-.logo{
+.logo {
   text-align: right;
-  color: rgb(68, 68, 214);
+  color: #4070f4;
 }
-.login-input{
+:where(.container, form, .input-field, header) {
   display: flex;
-  justify-content: center; 
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
-.main-input{
-  width: 60%;
-  height: 50vh; 
+.container {
   position: absolute;
   top: 50%;
+  left: 24%;
+  right: 24%;
   transform: translate(0, -50%);
+  align-items: center;
+  background: #fff;
+  padding: 30px 65px;
+  border-radius: 12px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
-input{
-  outline: none;
-  width: 80%;
-  border: 1px solid gray;
-  height: 35px;
-  padding: 0 10px;
-  margin-top: 10px;
-}
-#verify-btn{
-  background-color: black;
+.container header {
+  height: 65px;
+  width: 65px;
+  background: #4070f4;
   color: #fff;
-  margin-bottom: 15px;
+  font-size: 2.5rem;
+  border-radius: 50%;
 }
-.main-input a{
-  display: block;
-  color: seagreen;
-  text-decoration: none;
+.container h4 {
+  margin-top: 15px;
+  font-size: 1.25rem;
+  color: #333;
+  font-weight: 500;
+}
+form .input-field {
+  flex-direction: row;
+  column-gap: 10px;
+}
+.input-field input {
+  height: 45px;
+  width: 42px;
+  border-radius: 6px;
+  outline: none;
+  font-size: 1.125rem;
+  text-align: center;
+  border: 1px solid #ddd;
+}
+.input-field input:focus {
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+}
+.input-field input::-webkit-inner-spin-button,
+.input-field input::-webkit-outer-spin-button {
+  display: none;
+}
+form button {
+  margin-top: 25px;
+  width: 100%;
+  color: #fff;
+  font-size: 1rem;
+  border: none;
+  padding: 9px 0;
+  cursor: pointer;
+  border-radius: 6px;
+  pointer-events: none;
+  background: #6e93f7;
+  transition: all 0.2s ease;
+}
+form button.active {
+  background: #4070f4;
+  pointer-events: auto;
+}
+form button:hover {
+  background: #0e4bf1;
 }
 @media only screen and (max-width: 600px) {
-  .verify-image-text{
+  .verify-image-text {
     display: none;
   }
-  .main-input{
-    width: 90%;
-    margin: 0 0 0 50px;
-  }
-  .main-verify{
-    padding: 20px 20px 0 0 ;
+  .main-verify {
     width: 100%;
+    position: relative;
+    padding: 20px 30px 0 0;
+  }
+  .container {
+    left: 5%;
+    right: 5%;
+    width: 90%;
+    transform: translate(0, -70%);
   }
 }
