--- a/dashboard.css
+++ b/dashboard.css
@@ -307,7 +307,7 @@
   }
   .statistics-savings {
     width: 100%;
-    height: 40vh;
+    height: 4 0vh;
     padding: 50px 0;
     background-color: #201d1d;
   }
